llvm-gcc-4.2-2.9/gcc/testsuite/objc.dg/global-obj.m
/* APPLE LOCAL file 6393374 */

#include "../objc/execute/Object2.h"

Object s[1][1];	/* { dg-error "statically allocated instance of Objective-C class" } */
